--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("heart-bg.jpg");
+    background-image: url("buteerfly.gif");
     font-family: "Pixelify Sans", sans-serif;
 }
 
